# dtm2020

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  dtm2020_cpp20_port_plan.md
.github/workflows/: ci.yml
cmake/: dtm2020Config.cmake.in  sanitizers.cmake  warnings.cmake
docs/: licensing.md  model_notes.md  numerical_fidelity.md  operational_vs_research.md  perf_baseline.md  thread_safety_and_performance.md
examples/: dtm2020_cli.cpp
include/dtm2020/: dtm2020_operational.hpp  dtm2020_research.hpp  logging.hpp  result.hpp  sigma_uncertainty.hpp  types.hpp
src/: dtm2020_operational.cpp  dtm2020_research.cpp  error_utils.cpp  sigma_uncertainty.cpp
testdata/: README.md  operational_regression_vectors.csv  operational_vectors.csv
tests/: CMakeLists.txt  coeff_path_config.hpp  operational_golden_test.cpp  operational_numerical_regression_test.cpp  operational_perf_benchmark.cpp  operational_smoke_test.cpp  package_install_smoke.cmake  research_benchmark_test.cpp  research_perf_benchmark.cpp  research_smoke_test.cpp  sigma_smoke_test.cpp  thread_safety_smoke_test.cpp
tests/package_consumer/: CMakeLists.txt  main.cpp
tools/: generate_operational_vectors_fortran.sh  profile_operational.sh  profile_research.sh  validate_all.sh  validate_package_install.sh
