add_executable(dtm2020_sigma_smoke
  sigma_smoke_test.cpp
)

target_link_libraries(dtm2020_sigma_smoke PRIVATE dtm2020)
dtm2020_apply_common_warnings(dtm2020_sigma_smoke)
dtm2020_apply_runtime_flags(dtm2020_sigma_smoke)

add_test(NAME dtm2020_sigma_smoke COMMAND dtm2020_sigma_smoke)

add_executable(dtm2020_operational_smoke
  operational_smoke_test.cpp
)

target_link_libraries(dtm2020_operational_smoke PRIVATE dtm2020)
dtm2020_apply_common_warnings(dtm2020_operational_smoke)
dtm2020_apply_runtime_flags(dtm2020_operational_smoke)

add_test(NAME dtm2020_operational_smoke COMMAND dtm2020_operational_smoke)

add_executable(dtm2020_operational_golden
  operational_golden_test.cpp
)

target_link_libraries(dtm2020_operational_golden PRIVATE dtm2020)
dtm2020_apply_common_warnings(dtm2020_operational_golden)
dtm2020_apply_runtime_flags(dtm2020_operational_golden)

add_test(NAME dtm2020_operational_golden COMMAND dtm2020_operational_golden)

add_executable(dtm2020_operational_numerical_regression
  operational_numerical_regression_test.cpp
)

target_link_libraries(dtm2020_operational_numerical_regression PRIVATE dtm2020)
dtm2020_apply_common_warnings(dtm2020_operational_numerical_regression)
dtm2020_apply_runtime_flags(dtm2020_operational_numerical_regression)
target_compile_definitions(dtm2020_operational_numerical_regression
  PRIVATE DTM2020_SOURCE_DIR="${CMAKE_SOURCE_DIR}"
)

add_test(NAME dtm2020_operational_numerical_regression COMMAND dtm2020_operational_numerical_regression)

add_executable(dtm2020_research_smoke
  research_smoke_test.cpp
)

target_link_libraries(dtm2020_research_smoke PRIVATE dtm2020)
dtm2020_apply_common_warnings(dtm2020_research_smoke)
dtm2020_apply_runtime_flags(dtm2020_research_smoke)

add_test(NAME dtm2020_research_smoke COMMAND dtm2020_research_smoke)

add_executable(dtm2020_research_benchmark
  research_benchmark_test.cpp
)

target_link_libraries(dtm2020_research_benchmark PRIVATE dtm2020)
dtm2020_apply_common_warnings(dtm2020_research_benchmark)
dtm2020_apply_runtime_flags(dtm2020_research_benchmark)

add_test(NAME dtm2020_research_benchmark COMMAND dtm2020_research_benchmark)

add_executable(dtm2020_operational_perf_benchmark
  operational_perf_benchmark.cpp
)

target_link_libraries(dtm2020_operational_perf_benchmark PRIVATE dtm2020)
dtm2020_apply_common_warnings(dtm2020_operational_perf_benchmark)
dtm2020_apply_runtime_flags(dtm2020_operational_perf_benchmark)
